k8s/optional/ingress.yaml
#
# Copyright (c) 2020 Oracle and/or its affiliates.
#
# Licensed under the Universal Permissive License v 1.0 as shown at
# http://oss.oracle.com/licenses/upl.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sockshop-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: socks.oracle-poc.providus.rs
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: front-end
              port:
                number: 80
  - host: api-socks.oracle-poc.providus.rs
    http:
      paths:
        - path: /carts
          pathType: Prefix
          backend:
            service:
              name: carts
              port:
                number: 80
        - path: /catalogue
          pathType: Prefix
          backend:
            service:
              name: catalogue
              port:
                number: 80
        - path: /orders
          pathType: Prefix
          backend:
            service:
              name: orders
              port:
                number: 80
        - path: /paymentAuth
          pathType: Prefix
          backend:
            service:
              name: payment-http
              port:
                number: 80
        - path: /shipping
          pathType: Prefix
          backend:
            service:
              name: shipping-http
              port:
                number: 80
        - path: /login
          pathType: Prefix
          backend:
            service:
              name: user
              port:
                number: 80
        - path: /register
          pathType: Prefix
          backend:
            service:
              name: user
              port:
                number: 80
        - path: /customers
          pathType: Prefix
          backend:
            service:
              name: user
              port:
                number: 80
        - path: /addresses
          pathType: Prefix
          backend:
            service:
              name: user
              port:
                number: 80
        - path: /cards
          pathType: Prefix
          backend:
            service:
              name: user
              port:
                number: 80
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$$2
#  name: mp-ingress
#spec:
#  rules:
#  - host: mp-socks.oracle-poc.providus.rs
#    http:
#      paths:
#        - path: /swagger(/|$)(.*)
#          backend:
#            service: swagger
#            port:
#              number: 80
#        - path: /carts(/|$)(.*)
#          backend:
#            service: carts
#            port:
#              number: 80
#        - path: /catalogue(/|$)(.*)
#          backend:
#            service: catalogue
#            port:
#              number: 80
#        - path: /orders(/|$)(.*)
#          backend:
#            service: orders
#            port:
#              number: 80
#        - path: /payments(/|$)(.*)
#          backend:
#            service: payment-http
#            port:
#              number: 80
#        - path: /shipping(/|$)(.*)
#          backend:
#            service: shipping-http
#            port:
#              number: 80
#        - path: /users(/|$)(.*)
#          backend:
#            service: user
#            port:
#              number: 80
